<resources>
    <!-- MainActivity -->
    <string name="app_name">Workout Tracker</string>
    <string name="create_workout">Create Workout</string>
    <string name="view_workouts">View Workouts</string>
    <string name="workout_mode">Workout Mode</string>

    <!-- WorkoutActivity -->
    <string name="blank_recyclerview">Add exercises with the plus button</string>
    <string name="exercise_name">Exercise name</string>
    <string name="Weight_lbs">Weight (lbs)</string>
    <string name="Reps">Reps</string>
    <string name="lbs">lbs</string>
    <string name="reps">reps</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>


    <!-- NewWorkoutDialog -->
    <string name="create_new_workout">Create New Workout</string>

    <!-- ExerciseFragment -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_workout_mode">WorkoutModeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="right_arrow">right arrow</string>
    <string name="left_arrow">left arrow</string>
    <string name="bump_weight">Bump Weight</string>
    <string name="bump_reps">Bump Reps</string>
</resources>
